# DXFViewer

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  SETUP.md  TECH_STACK.md  index.html  package.json  run-dev.mjs  tsconfig.app.json  vite.config.ts
scripts/: build-wasm.bat  build-wasm.js  build-wasm.sh
src/: App.tsx  dxf_parser.cpp  dxf_parser.h  index.css  main.cpp  renderer.cpp  renderer.h
src/bridge/: RendererBridge.ts
src/components/: CanvasView.tsx  LayerPanel.tsx  PointOptsPanel.tsx  Sidebar.tsx  Toolbar.tsx
src/context/: RendererContext.tsx
src/hooks/: useRendererBridge.ts  useWasmModule.ts
src/types/: dxf.ts  wasm.ts
web/: index.html  style.css  viewer.js
